<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_world"
        android:title="@string/world_chats"
        android:icon="@drawable/world"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_chats"
        android:title="@string/chats"
        android:icon="@drawable/chat"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_friends"
        android:title="@string/friends"
        android:icon="@drawable/friends"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_alerts"
        android:title="@string/alerts"
        android:icon="@drawable/notification_bell"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/menu_profile"
        android:title="@string/my_profile"
        android:icon="@drawable/user"
        app:showAsAction="ifRoom"/>


</menu>