<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.auth.StartActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/start_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/racoon_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/racoon_200" />

        <FrameLayout
            android:id="@+id/start_fragment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_xxxlarge"
            android:layout_marginStart="@dimen/margin_xxxlarge"
            android:layout_marginTop="@dimen/margin_xlarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_logo" />

        <TextView
            android:id="@+id/start_show_fragment"
            style="@style/Text.Button"
            android:layout_marginStart="@dimen/margin_xxxlarge"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/already_have_an_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_fragment_container" />

        <TextView
            android:id="@+id/start_forgot_password"
            style="@style/Text.Button"
            android:layout_marginStart="@dimen/margin_xxxlarge"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_show_fragment" />

        <Button
            android:id="@+id/start_chat_now"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_xxxlarge"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:text="@string/chat_now"
            android:textSize="@dimen/text_size_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_forgot_password"
            app:layout_constraintVertical_bias="0.0" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
