<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/pick_user_no_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/no_search_results"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pick_user_search_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pick_user_search_list" />

    <ProgressBar
        android:id="@+id/pick_user_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/pick_user_search_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/pick_user_search_list" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/pick_user_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:layout_alignParentStart="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:src="@drawable/back" />

        <EditText
            android:id="@+id/pick_user_search_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/pick_user_back"
            android:layout_toStartOf="@id/pick_user_search"
            android:background="@android:color/transparent"
            android:inputType="textPersonName|text"
            android:hint="@string/search_user"
            android:padding="16dp"
            android:textColor="@android:color/black" />

        <ImageButton
            android:id="@+id/pick_user_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="@string/search"
            android:padding="16dp"
            android:src="@drawable/search" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@android:color/darker_gray" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pick_user_selected_list_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="56dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/pick_user_selected_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/pick_user_add"/>

        <Button
            android:id="@+id/pick_user_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <com.suzei.racoon.util.view.EmptyRecyclerView
        android:id="@+id/pick_user_search_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pick_user_selected_list_layout" />

</android.support.constraint.ConstraintLayout>